feat(Product) - Implements product module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     },
     "typeRoots": [
       "@types",
-      "./node_modules/@types"
+      "./node_modules/@types",
+      "./src/@types"
     ]
   },
   "exclude": [
