--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/mime-types": "^2.1.1",
+    "@types/multer": "^1.4.7",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
@@ -50,6 +52,8 @@
     "express-async-errors": "^3.1.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mime-types": "^2.1.35",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.6.0",
