--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,8 @@
-API_REST_PORT=5000
-
 ## DB Configurations ##
 DB_DIALECT=mysql
-DB_HOST=localhost
+DB_HOST=us-cdbr-east-05.cleardb.net
 DB_PORT=3306
-DB_NAME=maisarvores
-DB_USER=
-DB_PASSWORD=
+DB_NAME=heroku_ca4507189fd2c81
+DB_USER=bf346aba9bb7c4
+DB_PASSWORD=51fc4007
 
-DB_TEST_NAME=maisarvores_test
