--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ DB_DIALECT=mysql
 DB_HOST=us-cdbr-east-05.cleardb.net
 DB_PORT=3306
 DB_NAME=heroku_ca4507189fd2c81
-DB_USER=bf346aba9bb7c4
-DB_PASSWORD=51fc4007
+DB_USER=
+DB_PASSWORD=
 
