--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "prettier": "^2.5.1",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
-    "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.13.0",
     "tscpaths": "^0.0.9",
     "typescript": "^4.6.2"
@@ -57,8 +56,10 @@
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8",
     "tsyringe": "^4.6.0",
-    "typeorm": "^0.2.45",
+    "typeorm": "^0.3.6",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
   }
