--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rimraf dist/* && tsc -p tsconfig.json && tscpaths -p tsconfig.json -s . -o ./dist",
     "postbuild": "copyfiles .env.example dist/",
     "start": "node dist/src/shared/infra/http/server.js",
-    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "typeorm": "typeorm-ts-node-commonjs",
     "test": "NODE_ENV=test jest --runInBand"
   },
   "keywords": [],
@@ -24,6 +24,7 @@
     "@types/mime-types": "^2.1.1",
     "@types/multer": "^1.4.7",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
@@ -37,6 +38,8 @@
     "prettier": "^2.5.1",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.13.0",
     "tscpaths": "^0.0.9",
     "typescript": "^4.6.2"
@@ -56,8 +59,7 @@
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
-    "ts-node": "^10.7.0",
-    "ts-node-dev": "^1.1.8",
+    "swagger-ui-express": "^4.3.0",
     "tsyringe": "^4.6.0",
     "typeorm": "^0.3.6",
     "uuid": "^8.3.2",
