--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "aws-sdk": "^2.1154.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "copyfiles": "^2.4.1",
