--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mime-types": "^2.1.1",
     "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^3.0.0",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
@@ -35,6 +36,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
+    "multer-s3": "^3.0.1",
     "prettier": "^2.5.1",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
@@ -45,7 +47,6 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "aws-sdk": "^2.1154.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "copyfiles": "^2.4.1",
