--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "lib": [
-      "ES2020"
+      "ES2020",
+      "dom"
     ],
     "module": "commonjs",
     "moduleResolution": "node",
